--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,6 @@
     "*.css"
   ],
   "dependencies": {
-    "bootstrap-sass-official": ">= 3.3.1"
+    "bootstrap-sass-official": "~3.3.1"
   }
 }
