--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,7 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "bower_components"
   ],
   "dependencies": {
     "bootstrap-sass-official": "3.3.1"
