--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "1.3.0",
   "homepage": "https://github.com/CruGlobal/crubrand",
   "authors": [
-    "Elikem Adadevoh <elikem@gmail.com>"
+    "Elikem Adadevoh <elikem@gmail.com>",
+    "James Dempsey <thejamesdempsey@gmail.com>"
   ],
   "description": "A Cru branded scss theme for web projects",
   "main": "_crubrand.scss",
